<resources>
    <string name="app_name">BookStore</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Book Collection</string>
    <string name="nav_header_subtitle">by Sourav Banerjee</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Scan</string>
    <string name="menu_gallery">Books</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="todo">TODO</string>
    <string name="scan_a_barcode">Book not found yet.</string>
    <string name="welcome">Welcome!</string>
    <string name="homepage_description">Click the bottom-right button to enter a book into the app. Switch tabs to see current books.</string>
    <string name="add">Add</string>
    <string name="empty_list_text">List is empty.</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_author">Enter Author(s)</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="isbn">ISBN Entry</string>
    <string name="share">Manual Entry</string>
    <string name="barcode">Barcode Scanner</string>
    <string name="literally_nothing">Literally nothing</string>
    <string name="add_record">Add Record</string>
    <string name="enter_desc">Enter Author</string>
    <string name="fragment_emp_list">fragment_emp_list</string>
    <string name="enter_isbn">Enter ISBN</string>
    <string name="activity_add_record" />
    <string name="fragment_author_books" />
</resources>
