<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:tag="@string/activity_add_record"
    android:id="@+id/activity_add_record">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/author_edittext"
            android:layout_width="367dp"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/enter_desc"
            android:inputType="textMultiLine"
            android:minLines="5"/>

        <ListView
            android:id="@+id/list_view_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:padding="5dp">
        </ListView>

        <TextView
            android:id="@+id/empty_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list_text" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        app:srcCompat="@drawable/ic_cancel_24px"
        android:visibility="visible"
        app:backgroundTint="#ffffff"
        app:pressedTranslationZ="12dp"
        tools:targetApi="lollipop" />
</RelativeLayout>