<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.HomeFragment">



    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outerLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="center">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="397dp"
                android:layout_height="373dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00BCD4">

                    <Button
                        android:id="@+id/add_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:layout_marginEnd="147dp"
                        android:layout_marginLeft="146dp"
                        android:layout_marginRight="147dp"
                        android:layout_marginStart="146dp"
                        android:background="#F44336"
                        android:text="@string/add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/thumb"
                        android:layout_width="50dp"
                        android:layout_height="80dp"
                        android:layout_marginBottom="220dp"
                        android:layout_marginEnd="178dp"
                        android:layout_marginLeft="178dp"
                        android:layout_marginRight="178dp"
                        android:layout_marginStart="178dp"
                        android:contentDescription="@string/todo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.52"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/book_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:gravity="center"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/book_title" />

                    <TextView
                        android:id="@+id/barcode_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="308dp"
                        android:gravity="center"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/book_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:text="@string/scan_a_barcode"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/thumb" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="412dp"
                android:layout_height="160dp"
                android:layout_marginBottom="32dp"
                android:background="#E91E63"
                android:fadingEdge="horizontal|vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="395dp"
                        android:layout_height="107dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:gravity="center"
                        android:text="@string/homepage_description"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="160dp"
                        android:layout_height="49dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="126dp"
                        android:layout_marginLeft="126dp"
                        android:layout_marginRight="126dp"
                        android:layout_marginStart="126dp"
                        android:clickable="false"
                        android:text="@string/welcome"
                        android:textColor="#FFFFFF"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toTopOf="@+id/subtitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="221dp"
        android:layout_height="309dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textview_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="256dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            app:backgroundTint="#212121"
            android:padding="8dp"
            android:text="@string/isbn"
            android:textColor="#ffffff"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textview_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="186dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            app:backgroundTint="#212121"
            android:padding="8dp"
            android:text="@string/share"
            android:textColor="#ffffff"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textview_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="116dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            app:backgroundTint="#212121"
            android:padding="8dp"
            android:text="@string/barcode"
            android:textColor="#ffffff"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="176dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:clickable="true"
            android:elevation="16dp"
            android:focusable="true"
            android:visibility="invisible"
            app:backgroundTint="#ffffff"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_title_24px"
            tools:targetApi="lollipop" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="246dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:clickable="true"
            android:elevation="16dp"
            android:focusable="true"
            android:visibility="invisible"
            app:backgroundTint="#ffffff"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_looks_5_24px"
            tools:targetApi="lollipop" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="106dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:clickable="true"
            android:elevation="16dp"
            android:focusable="true"
            android:visibility="invisible"
            app:backgroundTint="#ffffff"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_menu_camera"
            tools:targetApi="lollipop" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:clickable="true"
            android:elevation="16dp"
            android:focusable="true"
            android:visibility="visible"
            app:backgroundTint="#ffffff"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_add_24px"
            tools:targetApi="lollipop" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>